--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
       "outDir": "build",
+      "declaration": true,
       "module": "commonjs",
       "jsx": "react",
       "lib": ["dom", "es2017"],
@@ -12,9 +13,10 @@
       ],
       "typeRoots": [
         "node_modules",
-        "node_modules/@types"
+        "node_modules/@types",
+        "./types"
       ],
-      "baseUrl": "./"
+      "baseUrl": "./src"
     },
     "include": [
       "src/**/*"
