--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/sass": "^1.16.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1"
@@ -24,14 +25,21 @@
     "@types/react-dom": "^16.8.2",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^2.1.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-typescript": "^5.0.0",
     "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.3",
     "tslint": "^5.13.1",
+    "typed-css-modules-loader": "0.0.17",
     "typescript": "^3.3.3333",
+    "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
